Added: - Processing of command line options - Exception handling - Comments

--- a/StereoReconstruction.Common/NLog.config
+++ b/StereoReconstruction.Common/NLog.config
@@ -6,13 +6,13 @@
             layout="${message}"/>
     <target name="file"
             xsi:type="File"
-            fileName="file.txt"
+            fileName="error.txt"
             layout="${level} (${longdate})${newline}
+Additional Info: ${message}${newline}
 Call Site: ${callsite} ${callsite}${newline}
 Exception Type: ${exception:format=Type}${newline}
 Exception Message: ${exception:format=Message}${newline}
-Stack Trace: ${exception:format=StackTrace}${newline}
-Additional Info: ${message}" />
+Stack Trace: ${exception:format=StackTrace}${newline}" />
   </targets>
   <rules>
     <logger name="*" level="Info" writeTo="console" />
