Изменения: - Добавлен хелпер для записи матрицы в файл - Добавлен параметр -config в приложение - Уменьшен код в классе построения карты глубины, - Убрана привязка к файлу конфигурации, теперь в этот класс передается субъект съемки.

--- a/StereoReconstruction.Common/StereoReconstruction.Common.csproj
+++ b/StereoReconstruction.Common/StereoReconstruction.Common.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\FileHelper.cs" />
     <Compile Include="Helpers\SerializerHelper.cs" />
     <Compile Include="Logging\Tracer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -57,12 +58,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="NLog.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <SubType>Designer</SubType>
-    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
