--- a/StereoReconstruction.DepthMapFromStereo/StereoReconstruction.DepthMapFromStereo.csproj
+++ b/StereoReconstruction.DepthMapFromStereo/StereoReconstruction.DepthMapFromStereo.csproj
@@ -34,13 +34,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\libs\Emgu.CV.dll</HintPath>
     </Reference>
-    <Reference Include="Emgu.CV.UI, Version=3.0.0.2157, Culture=neutral, PublicKeyToken=7281126722ab4438, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\libs\Emgu.CV.UI.dll</HintPath>
-    </Reference>
     <Reference Include="Emgu.Util, Version=3.0.0.2157, Culture=neutral, PublicKeyToken=7281126722ab4438, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\libs\Emgu.Util.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
