--- a/StereoReconstruction.DepthMapFromStereo/StereoReconstruction.DepthMapFromStereo.csproj
+++ b/StereoReconstruction.DepthMapFromStereo/StereoReconstruction.DepthMapFromStereo.csproj
@@ -53,7 +53,8 @@
     <Compile Include="DepthMap.cs" />
     <Compile Include="Subject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SubjectResults.cs" />
+    <Compile Include="SubjectFileResults.cs" />
+    <Compile Include="ResultsFromRegionGrowing.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StereoReconstruction.Common\StereoReconstruction.Common.csproj">
