Удалены классы для сегментации по цвету из-за ненадобности В алгоритме RegionGrowin струтура заменена на список (тех регионов, которые необходимо удалить)

--- a/StereoReconstruction.TestDepthMap/StereoReconstruction.TestDepthMap.csproj
+++ b/StereoReconstruction.TestDepthMap/StereoReconstruction.TestDepthMap.csproj
@@ -96,6 +96,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Config\mainTest.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Config\test.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
