Изменения: [Added] Библиотека для записи STL модели формата Ascii в файл

--- a/StereoReconstruction.ModelViewer/StereoReconstruction.ModelViewer.csproj
+++ b/StereoReconstruction.ModelViewer/StereoReconstruction.ModelViewer.csproj
@@ -169,6 +169,9 @@
     <Content Include="Models\tour.obj">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Models\flat.stl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
